--- a/AndBible/res/values-af/strings.xml
+++ b/AndBible/res/values-af/strings.xml
@@ -74,6 +74,8 @@
   <string name="prefs_night_mode_automatic">Outomaties</string>
   <string name="prefs_navigate_to_verse_title">Gaan na vers</string>
   <string name="prefs_navigate_to_verse_summary">Kies vers (en hoofstuk) wanneer \'n teks gekies word</string>
+  <string name="prefs_open_links_in_special_window_title">Maak skakels in \'n spesiale venster</string>
+  <string name="prefs_open_links_in_special_window_summary">Vir vinniger vertoon van die kruis-verwysings en Strongs</string>
   <string name="prefs_text_size_title">Teks grootte</string>
   <string name="prefs_text_size_summary">Wys meer of sien meer duidelik</string>
   <string name="prefs_text_size_sample_text">Teks voorbeeld</string>
@@ -83,11 +85,13 @@
   <string name="prefs_interface_locale_title">Applikasie taal</string>
   <string name="prefs_interface_locale_summary">Kies \'n persoonlike gebruikers taal</string>
   <string name="locale_change_warning">Applikasie sal sal stop en weer van voor af begin om oor te skakel na die nuwe taal</string>
-  <string name="prefs_split_screen_title">Verdeelde skerm</string>
-  <string name="prefs_split_screen_summary">Verdeeling &amp; Kopeling</string>
-  <string name="prefs_split_screen_single">Enkel Skerm</string>
-  <string name="prefs_split_screen_linked">Gekoppel</string>
-  <string name="prefs_split_screen_not_linked">Nie Gekoppel</string>
+  <!--Window-->
+  <string name="window">Venster</string>
+  <string name="windowClose">Maak Toe</string>
+  <string name="windowMaximise">Vermeeder</string>
+  <string name="windowMinimise">Verminder</string>
+  <string name="windowSynchronise">Sinchroniseer</string>
+  <string name="windowMoveFirst">Skuif eerste</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Daar is geen notas vir hierdie hoofstuk nie</string>
   <string name="no_verse_notes">Daar is geen notas ​​vir hierdie vers nie</string>
@@ -224,6 +228,8 @@
   <string name="please_wait">Wag asseblief ...</string>
   <string name="all">Alles</string>
   <string name="default_value">@string/lang_default</string>
+  <string name="new_item">Nuut</string>
+  <string name="close">Maak toe</string>
   <!--Errors-->
   <string name="error_occurred">\'n Fout het ontstaan</string>
   <string name="error_no_content">Geen inhoud vir geselekteerde vers</string>
