--- a/AndBible/res/values-ar/strings.xml
+++ b/AndBible/res/values-ar/strings.xml
@@ -80,11 +80,7 @@
   <string name="prefs_interface_locale_title">لغة التطبيق (البرنامج)</string>
   <string name="prefs_interface_locale_summary">اختر اللغة لواجهة الاستخدام في البرنامج</string>
   <string name="locale_change_warning">سيتم اعادة فتح البرنامج لتفعيل اللغة المختارة لواجهة المستخدم</string>
-  <string name="prefs_split_screen_title">تقسيم الشاشة</string>
-  <string name="prefs_split_screen_summary">تقسيم و وصل</string>
-  <string name="prefs_split_screen_single">شاشة واحدة</string>
-  <string name="prefs_split_screen_linked">موصول</string>
-  <string name="prefs_split_screen_not_linked">غير موصول</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">لا يوجد ملاحظات في الاصحاح</string>
   <string name="no_verse_notes">لا يوجد ملاحظات للآية</string>
