--- a/AndBible/res/values-de/strings.xml
+++ b/AndBible/res/values-de/strings.xml
@@ -83,11 +83,7 @@
   <string name="prefs_interface_locale_title">Sprache umschalten</string>
   <string name="prefs_interface_locale_summary">Umschalten der Sprache der Benutzerführung</string>
   <string name="locale_change_warning">AndBible wird zur Sprachumstellung neu gestartet</string>
-  <string name="prefs_split_screen_title">Teile Bildschirm</string>
-  <string name="prefs_split_screen_summary">Teilen &amp; verknüpfen</string>
-  <string name="prefs_split_screen_single">Einzelner Bildschirm</string>
-  <string name="prefs_split_screen_linked">Verbunden</string>
-  <string name="prefs_split_screen_not_linked">Nicht verbunden</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Keine Anmerkungen in diesem Kapitel</string>
   <string name="no_verse_notes">Keine Anmerkungen zu diesem Vers</string>
