--- a/AndBible/res/values-es/strings.xml
+++ b/AndBible/res/values-es/strings.xml
@@ -83,11 +83,7 @@
   <string name="prefs_interface_locale_title">Idioma de la aplicación</string>
   <string name="prefs_interface_locale_summary">Selecciona lenguaje de interfaz personalizado</string>
   <string name="locale_change_warning">La aplicación será reiniciada para cambiar al nuevo lenguaje de interfaz</string>
-  <string name="prefs_split_screen_title">Dividir pantalla</string>
-  <string name="prefs_split_screen_summary">Dividir &amp; enlazar</string>
-  <string name="prefs_split_screen_single">Pantalla única</string>
-  <string name="prefs_split_screen_linked">Enlazado</string>
-  <string name="prefs_split_screen_not_linked">No enlazado</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">No existen notas en este capítulo</string>
   <string name="no_verse_notes">No existen notas en este verso</string>
