--- a/AndBible/res/values-id/strings.xml
+++ b/AndBible/res/values-id/strings.xml
@@ -83,11 +83,7 @@
   <string name="prefs_interface_locale_title">Aplikasi bahasa</string>
   <string name="prefs_interface_locale_summary">Pilih bahasa perantara pengguna </string>
   <string name="locale_change_warning">Aplikasi akan dijalankan ulang untuk beralih ke bahasa perantara</string>
-  <string name="prefs_split_screen_title">Membagi layar</string>
-  <string name="prefs_split_screen_summary">Membagi &amp; linking</string>
-  <string name="prefs_split_screen_single">Satu Layar</string>
-  <string name="prefs_split_screen_linked">Linked</string>
-  <string name="prefs_split_screen_not_linked">Tidak Linked</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Tidak ada catatan dalam bab ini</string>
   <string name="no_verse_notes">Tidak ada catatan dalam ayat ini</string>
