--- a/AndBible/res/values-iw/strings.xml
+++ b/AndBible/res/values-iw/strings.xml
@@ -20,6 +20,8 @@
   <string name="choosePassageBookName">בחר ספר</string>
   <string name="choosePassageChapterName">בחר פרק</string>
   <string name="choosePassageVerseName">בחר פסוק</string>
+  <string name="bible">תנ\"ך</string>
+  <string name="deuterocanonical">ספרים חיצוניים</string>
   <!--Search-->
   <string name="search_index">אינדקס לחיפוש</string>
   <string name="index_creation_required">נדרש אינדקס כדי לחפש.\n\nניתן להוריד אינדקסים מהאינטרנט, או ליצור אותם במכשיר.\n\nהורדה תהיה מהירה יותר, ותכיל יותר אפשרויות.\n\nנדרש חיבור לאינטרנט כדי להוריד אינדקסים.\n</string>
@@ -72,6 +74,8 @@
   <string name="prefs_night_mode_automatic">אוטומטי</string>
   <string name="prefs_navigate_to_verse_title">עבור לפסוק</string>
   <string name="prefs_navigate_to_verse_summary">אפשר בחירת פסוק בעת מעבר</string>
+  <string name="prefs_open_links_in_special_window_title">פתח קישורים בחלון שונה</string>
+  <string name="prefs_open_links_in_special_window_summary">להצגה מהירה של מראי מקום מקבילים וSTRONG</string>
   <string name="prefs_text_size_title">גודל הטקסט</string>
   <string name="prefs_text_size_summary">שינוי גודל האותיות</string>
   <string name="prefs_text_size_sample_text">טקסט לדוגמה</string>
@@ -81,11 +85,13 @@
   <string name="prefs_interface_locale_title">שפת התוכנה</string>
   <string name="prefs_interface_locale_summary">בחירת שפה עבור התוכנה</string>
   <string name="locale_change_warning">התוכנה תופעל מחדש כדי לשנות את השפה</string>
-  <string name="prefs_split_screen_title">מסך מפוצל</string>
-  <string name="prefs_split_screen_summary">פיצול &amp; קישור</string>
-  <string name="prefs_split_screen_single">מסך אחד</string>
-  <string name="prefs_split_screen_linked">מקושר</string>
-  <string name="prefs_split_screen_not_linked">לא מקושר</string>
+  <!--Window-->
+  <string name="window">חלון</string>
+  <string name="windowClose">סגור</string>
+  <string name="windowMaximise">הגדל</string>
+  <string name="windowMinimise">הקטן</string>
+  <string name="windowSynchronise">סנכרון</string>
+  <string name="windowMoveFirst">העבר ראשון</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">אין הערות לפרק זה</string>
   <string name="no_verse_notes">אין הערות לפסוק זה</string>
@@ -127,6 +133,7 @@
   <string name="rdg_plan_y1ot1nt1_OTandNT">כל הכתובים במשך שנה - תנ\"ך ברית חדשה</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">כל הכתובים בשנה - תנך וברית חדשה</string>
   <string name="rdg_plan_y1ot1nt2_mcheyne">רק התנ\"ך במשך שנה (M\'Cheyne)</string>
+  <string name="rdg_plan_y2ot1ntps2">תוכנית לשנתיים - פעם אחת את כל התנ\"ך, ופעמיים את תהילים והברית החדשה.</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">מחיקה</string>
@@ -156,6 +163,7 @@
   <!--Sort orders used for Bookmarks and MyNotes-->
   <string name="sort_by_date">סדר תאריכים</string>
   <string name="sort_by_bible_book">סדר הספרים</string>
+  <string name="sort_by_alphabetical">סדר לפי א-ב</string>
   <!--Dictionary-->
   <string name="dictionary">מילון</string>
   <string name="search_dictionary_hint">חיפוש במילון</string>
@@ -220,6 +228,8 @@
   <string name="please_wait">אנא המתן...</string>
   <string name="all">הכל</string>
   <string name="default_value">@string/lang_default</string>
+  <string name="new_item">חדש</string>
+  <string name="close">סגור</string>
   <!--Errors-->
   <string name="error_occurred">אירעה שגיאה</string>
   <string name="error_no_content">אין תוכן עבור הפסוק הנבחר</string>
