--- a/AndBible/res/values-kk/strings.xml
+++ b/AndBible/res/values-kk/strings.xml
@@ -83,11 +83,7 @@
   <string name="prefs_interface_locale_title">Қолдану тілі</string>
   <string name="prefs_interface_locale_summary">Пайдаланушы интерфейс тілін таңдау</string>
   <string name="locale_change_warning">Жаңа интерфейс тіліне ауысу үшін қолданылатын тапсырма қайта басталады</string>
-  <string name="prefs_split_screen_title">Экранды бөлу</string>
-  <string name="prefs_split_screen_summary">Мысалдарды бөлу; байланыс қатынасы</string>
-  <string name="prefs_split_screen_single">Жеке экран</string>
-  <string name="prefs_split_screen_linked">Байланыста</string>
-  <string name="prefs_split_screen_not_linked">Байланысы жоқ</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Бұл тарауда ешқандай мәлімет жоқ</string>
   <string name="no_verse_notes">Бұл аятта ешқандай мәлімет жоқ</string>
