--- a/AndBible/res/values-ky/strings.xml
+++ b/AndBible/res/values-ky/strings.xml
@@ -83,11 +83,7 @@
   <string name="prefs_interface_locale_title">Тил</string>
   <string name="prefs_interface_locale_summary">Интерфейстин тилин тандоо.</string>
   <string name="locale_change_warning">Интерфейстин жаңы тилине өтүү үчүн кайрадан жүктөө тиркемеси.</string>
-  <string name="prefs_split_screen_title">Экранды бөлүү</string>
-  <string name="prefs_split_screen_summary">Күтө туруңуз...</string>
-  <string name="prefs_split_screen_single">Бир экран</string>
-  <string name="prefs_split_screen_linked">Эки - байланышкан</string>
-  <string name="prefs_split_screen_not_linked">Эки - байланышсыз</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Бул бөлүмгө түшүрмө жок.</string>
   <string name="no_verse_notes">Бул аятта түшүрмө жок.</string>
