--- a/AndBible/res/values-lt/strings.xml
+++ b/AndBible/res/values-lt/strings.xml
@@ -74,6 +74,8 @@
   <string name="prefs_night_mode_automatic">Automatinis</string>
   <string name="prefs_navigate_to_verse_title">Nukreipti į eilutę</string>
   <string name="prefs_navigate_to_verse_summary">Pasirinkite eilutę (ir skyrių) renkantis ištrauką</string>
+  <string name="prefs_open_links_in_special_window_title">Nuorodas atverti atskirame lange</string>
+  <string name="prefs_open_links_in_special_window_summary">Greitesniai nuorodų ir Strongo peržiūrai</string>
   <string name="prefs_text_size_title">Teksto dydis</string>
   <string name="prefs_text_size_summary">Matyk daugiau arba aiškiau</string>
   <string name="prefs_text_size_sample_text">Pavyzdys</string>
@@ -83,11 +85,12 @@
   <string name="prefs_interface_locale_title">Programos kalba</string>
   <string name="prefs_interface_locale_summary">Pasirinkite vartotojo sąsajos kalbą</string>
   <string name="locale_change_warning">Kad pasikeistų kalba, programa bus perkrauta</string>
-  <string name="prefs_split_screen_title">Dalinti ekraną</string>
-  <string name="prefs_split_screen_summary">Dalinimas &amp; susiejimas</string>
-  <string name="prefs_split_screen_single">Vienas ekranas</string>
-  <string name="prefs_split_screen_linked">Susieta</string>
-  <string name="prefs_split_screen_not_linked">Nesusieta</string>
+  <!--Window-->
+  <string name="window">Langas</string>
+  <string name="windowClose">Užverti</string>
+  <string name="windowMaximise">Išdidinti</string>
+  <string name="windowMinimise">Sumažinti</string>
+  <string name="windowSynchronise">Sinchronizuoti</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Šiame skyriuje nėra pastabų</string>
   <string name="no_verse_notes">Šioje eilutėje nėra pastabų</string>
@@ -224,6 +227,8 @@
   <string name="please_wait">Prašome palaukti...</string>
   <string name="all">Viskas</string>
   <string name="default_value">@string/lang_default</string>
+  <string name="new_item">Naujas</string>
+  <string name="close">Užverti</string>
   <!--Errors-->
   <string name="error_occurred">Įvyko klaida</string>
   <string name="error_no_content">Šiai eilutei nėra teksto</string>
