--- a/AndBible/res/values-lv/strings.xml
+++ b/AndBible/res/values-lv/strings.xml
@@ -83,11 +83,7 @@
   <string name="prefs_interface_locale_title">Programmas valoda</string>
   <string name="prefs_interface_locale_summary">Izvēlieties pielāgotu lietotāja interfeisa valodu</string>
   <string name="locale_change_warning">Programma tiks pārstartēta, lai pārslēgtos uz jauno interfeisa valodu</string>
-  <string name="prefs_split_screen_title">Sadalīt ekrānu</string>
-  <string name="prefs_split_screen_summary">Sadalīt ekrānu &amp; saistīti</string>
-  <string name="prefs_split_screen_single">Viens ekrāns</string>
-  <string name="prefs_split_screen_linked">Saistīts</string>
-  <string name="prefs_split_screen_not_linked">Nav saistīts</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Šajā nodaļā nav piezīmju</string>
   <string name="no_verse_notes">Šajā pantā nav piezīmju</string>
