--- a/AndBible/res/values-nl/strings.xml
+++ b/AndBible/res/values-nl/strings.xml
@@ -88,11 +88,7 @@
   <string name="prefs_interface_locale_title">App taal</string>
   <string name="prefs_interface_locale_summary">Selecteer de gebruikers taal van deze app</string>
   <string name="locale_change_warning">App wordt opnieuw gestart om over te schakelen op de nieuwe gebruikers taal</string>
-  <string name="prefs_split_screen_title">Splits het scherm</string>
-  <string name="prefs_split_screen_summary">Splitsen en vergroten; koppelen</string>
-  <string name="prefs_split_screen_single">1 Scherm</string>
-  <string name="prefs_split_screen_linked">Gekoppeld</string>
-  <string name="prefs_split_screen_not_linked">Niet gekoppeld</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Er bestaan geen notities ​​in dit hoofdstuk</string>
   <string name="no_verse_notes">Er bestaan geen notities ​​in dit vers</string>
