--- a/AndBible/res/values-pl/strings.xml
+++ b/AndBible/res/values-pl/strings.xml
@@ -81,11 +81,7 @@
   <string name="prefs_interface_locale_title">Język programu</string>
   <string name="prefs_interface_locale_summary">Wybierz język</string>
   <string name="locale_change_warning">Aplikacja zostanie ponownie uruchomiona, aby przełączyć się na nowy język interfejsu</string>
-  <string name="prefs_split_screen_title">Podziel ekran</string>
-  <string name="prefs_split_screen_summary">Dzielenie i łączenie ekranu</string>
-  <string name="prefs_split_screen_single">Jeden ekran</string>
-  <string name="prefs_split_screen_linked">Przewijaj tekst razem</string>
-  <string name="prefs_split_screen_not_linked">Przewijaj tekst osobno</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Brak przypisów dla tego rozdziału</string>
   <string name="no_verse_notes">Brak przypisów dla tego wersetu</string>
