--- a/AndBible/res/values-pt/strings.xml
+++ b/AndBible/res/values-pt/strings.xml
@@ -80,11 +80,7 @@
   <string name="prefs_interface_locale_title">Idioma do aplicativo</string>
   <string name="prefs_interface_locale_summary">Selecione o idioma de preferencia para a interface do usuário</string>
   <string name="locale_change_warning">O aplicativo será reiniciado para trocar o idioma da nova interface.</string>
-  <string name="prefs_split_screen_title">Dividir tela</string>
-  <string name="prefs_split_screen_summary">Divisão &amp; relação entre telas</string>
-  <string name="prefs_split_screen_single">Uma tela</string>
-  <string name="prefs_split_screen_linked">Telas relacionadas</string>
-  <string name="prefs_split_screen_not_linked">Não relacionadas</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Não existem notas neste capítulo</string>
   <string name="no_verse_notes">Não existem notas para este versículo</string>
