--- a/AndBible/res/values-ru/strings.xml
+++ b/AndBible/res/values-ru/strings.xml
@@ -74,6 +74,8 @@
   <string name="prefs_night_mode_automatic">Автоматически</string>
   <string name="prefs_navigate_to_verse_title">Перейти к стиху</string>
   <string name="prefs_navigate_to_verse_summary">Перейти на уровень стиха при выборе отрывка</string>
+  <string name="prefs_open_links_in_special_window_title">Открывать ссылки в отдельном окне</string>
+  <string name="prefs_open_links_in_special_window_summary">Для быстрого отображения перекрестных ссылок и номеров Стронга</string>
   <string name="prefs_text_size_title">Размер текста</string>
   <string name="prefs_text_size_summary">Отображать текст крупными буквами</string>
   <string name="prefs_text_size_sample_text">Образец текста</string>
@@ -83,11 +85,13 @@
   <string name="prefs_interface_locale_title">Язык</string>
   <string name="prefs_interface_locale_summary">Выбрать язык интерфейса</string>
   <string name="locale_change_warning">Приложение перезагрузится для перехода интерфейса на новый язык.</string>
-  <string name="prefs_split_screen_title">Разделить экран</string>
-  <string name="prefs_split_screen_summary">Подождите минуточку...</string>
-  <string name="prefs_split_screen_single">Единый экран</string>
-  <string name="prefs_split_screen_linked">Соединенный</string>
-  <string name="prefs_split_screen_not_linked">Не соединенный</string>
+  <!--Window-->
+  <string name="window">Окно</string>
+  <string name="windowClose">Закрыть</string>
+  <string name="windowMaximise">Развернуть</string>
+  <string name="windowMinimise">Свернуть</string>
+  <string name="windowSynchronise">Синхронизировать</string>
+  <string name="windowMoveFirst">Сделать первым</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">В этой главе нет заметок.</string>
   <string name="no_verse_notes">В этом стихе нет заметок.</string>
@@ -224,6 +228,8 @@
   <string name="please_wait">Пожалуйста подождите...</string>
   <string name="all">Все</string>
   <string name="default_value">@string/lang_default</string>
+  <string name="new_item">Новое</string>
+  <string name="close">Закрыть</string>
   <!--Errors-->
   <string name="error_occurred">Произошла ошибка</string>
   <string name="error_no_content">В выбранных стихах нет содержания</string>
