--- a/AndBible/res/values-th/strings.xml
+++ b/AndBible/res/values-th/strings.xml
@@ -77,6 +77,7 @@
   <string name="prefs_interface_locale_title">เลือกภาษา</string>
   <string name="prefs_interface_locale_summary">เลือกเพื่อกำหนดเมนูภาษาด้วยตัวเอง</string>
   <string name="locale_change_warning">​โปรแกรม​จะ​เริ่มต้น​ใหม่​อีก​ครั้ง​เพื่อ​สลับ​เมนู​ภาษา</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">ไม่มีบันทึกในบทนี้</string>
   <string name="no_verse_notes">​ไม่​มี​การ​บันทึก​ใน​ข้อ​พระ​คัมภีร์​นี้</string>
