--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -81,11 +81,7 @@
   <string name="prefs_interface_locale_title">Arayüz dili</string>
   <string name="prefs_interface_locale_summary">Farklı bir arayüz dilini seç</string>
   <string name="locale_change_warning">Arayüzü yeni dilde kullanabilmek için uygulama yeniden başlatılacaktır.</string>
-  <string name="prefs_split_screen_title">Bölünmüş ekran</string>
-  <string name="prefs_split_screen_summary">Ekran bölünmesi &amp; bağlanması</string>
-  <string name="prefs_split_screen_single">Tek ekran</string>
-  <string name="prefs_split_screen_linked">Bağlandı</string>
-  <string name="prefs_split_screen_not_linked">Bağlı değil</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Bu bölüme ait not bulunmadı</string>
   <string name="no_verse_notes">Bu ayete ait not bulunmadı</string>
