--- a/AndBible/res/values-vi/strings.xml
+++ b/AndBible/res/values-vi/strings.xml
@@ -77,6 +77,7 @@
   <string name="prefs_interface_locale_title">Ngôn ngữ</string>
   <string name="prefs_interface_locale_summary">Chọn ngôn ngữ</string>
   <string name="locale_change_warning">Chương trình sẽ được khởi động lại để chuyển sang ngôn ngữ mới.</string>
+  <!--Window-->
   <!--Notes screen-->
   <string name="no_chapter_notes">Không có ghi chú nào ở chương này.</string>
   <string name="no_verse_notes">Không có ghi chú nào trong câu này.</string>
